# pascal2c-compiler

./: .gitignore  README.md
lex-yacc-src/: PPT上的更正说明.txt  PascalProgram.pas  auto_compile.sh  auto_complie_and_run.bat  lex.l  main.h  preProcessed.pas  yacc.output  yacc.tab.h  yacc.y
lex-yacc-src/添加了错误个数控制的版本，与vs工程关联，所以无法单独正确运行/: lex.l  main.cpp  main.h  yacc.y
src/: ASTnodes.cpp  ASTnodes.h  CMakeLists.txt  FunctionReturnExistedCheck.cpp  PascalProgram.pas  codeGenerate.cpp  lex.yy.cpp  main.cpp  main.h  parseTree2AST.cpp  semanticAnalyse.cpp  symbolTable.cpp  symbolTable.h  yacc.tab.cpp
test-cases/: lex错误测试样例.md  代码生成测试样例.md  综合测试用例.md  语义分析测试样例.md  语法分析测试用例.md
各模块测试文档/: 代码生成 - 测试文档.docx  整体设计 - 测试文档.docx  词法分析 - 测试文档.docx  语义分析 - 测试文档.docx  语法分析 - 测试文档 - 不带调试输出.docx
各模块详细设计/: 代码生成 - 详细设计.docx  整体设计 - 详细设计.docx  词法分析 - 详细设计.docx  语义分析 - 详细设计.docx  语法分析 - 详细设计.docx
